# mcp-youtube-app

./: .env  app.py  main.py  mcp_handler.py  pyproject.toml
.streamlit/: config.toml
crash-course/3-simple-server-setup/: client-sse.py  client-stdio.py
servers/youtube/: client_nvidia.py  server.py
servers/youtube/src/: service.py
